--- a/Cpts411_PA5_Report.Rmd
+++ b/Cpts411_PA5_Report.Rmd
@@ -35,13 +35,49 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Analysis
 
-|    The data was collected on a personal computer, which utilizes an Intel i9-10900K CPU at 3.70GHz, containing 10 cores and 20 logical processors (threads).
+|       The data was collected on a personal computer, which utilizes an Intel i9-10900K CPU at 3.70GHz, containing 10 cores and 20 logical processors. The computer is running on Windows 11 Pro 23H2 Build 22631.2715 and has 32 GB Memory (RAM). When running the program, we got the following top five Google webpages based on the PageRank algorithm with the number of steps in the random walk $K = 100$, the number of processes used $p = 16$, and the dampening ratio $D = 0.25$.
+
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+library(knitr)
+
+# Set options to display numbers without scientific notation
+options(scipen = 999)
+
+df = data.frame(
+  Node = c(597621, 163075, 537039, 41909, 504140),
+  PageRank = c(0.000078, 0.000077, 0.000077, 0.000070, 0.000064)
+)
+
+kable(df, format = "markdown", 
+      caption = "Node and corresponding PageRank estimate for the node given K is 100, p is 16, and D is 0.25.")
+```
+Our first test we to see the effect of the estimate when we change the dampening ratio. The next two tables show similar results to table (1), but with dampening ratios of 0.5 and 0.75, respectively.
+
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+df1 = data.frame(
+  Node = c(163075, 537039, 597621, 605856, 551829),
+  PageRank = c(0.000043, 0.000039, 0.000039, 0.000034, 0.000034)
+)
+
+kable(df1, format = "markdown", 
+      caption = "Node and corresponding PageRank estimate for the node given K is 100, p is 16, and D is 0.50.")
+
+df2 = data.frame(
+  Node = c(163075, 537039, 597621, 605856, 819223),
+  PageRank = c(0.000020, 0.000017, 0.000017, 0.000015, 0.000014)
+)
+
+kable(df2, format = "markdown", 
+      caption = "Node and corresponding PageRank estimate for the node given K is 100, p is 16, and D is 0.75.")
+```
+Just visually, we can see that as the dampening ratio increases, the PageRank estimate decreases in value. However, the rank of each node (webpage) does not have much change. This is due to the fact that the dampening ratio only effects the likelihood to choose a new random node to start on. Since the nodes with higher estimates have a high total degree in the graph, they still will have a larger probability to be selected again later in the walk. This is also the case when we increase the number of steps in the random walk. Going off of how the estimate is calculated, the fraction value decreases since the number of vertices multiplied by the number of steps $K$ is in the denominator, resulting in its increase. The next test we did was on the time between the algorithm when using 1 thread up to 16 threads.
+
+
 
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 #Libraries
 library(ggplot2)
-library(knitr)
 library(stats)
 
 #Import data for analysis
@@ -56,10 +92,12 @@ serial_time_damp = subset(damp, p == 1)$Time
 serial_time_length = subset(length, p == 1)$Time
 
 #Get the parallel times for each P value
-parallel_time_damp = data.frame(matrix(ncol = length(unique(damp$p)), nrow = dim(damp)[1]))
+parallel_time_damp = data.frame(matrix(ncol = length(unique(damp$p)), 
+                                       nrow = dim(damp)[1]))
 colnames(parallel_time_damp) = c("1", "2", "4", "8", "16")
 
-parallel_time_length = data.frame(matrix(ncol = length(unique(length$p)), nrow = dim(length)[1]))
+parallel_time_length = data.frame(matrix(ncol = length(unique(length$p)), 
+                                         nrow = dim(length)[1]))
 colnames(parallel_time_length) = c("1", "2", "4", "8", "16")
 
 for (i in colnames(parallel_time_damp)) {
@@ -79,7 +117,8 @@ speedup_damp= data.frame(matrix(ncol = length(unique(damp$p)), nrow = 3))
 colnames(speedup_damp) = c("1", "2", "4", "8", "16")
 
 for (i in colnames(speedup_damp)) {
-  speedup_damp[,i] = (as.numeric(serial_time_damp)/as.numeric(parallel_time_damp[,i]))[1:3]
+  speedup_damp[,i] = (as.numeric(serial_time_damp)/
+                        as.numeric(parallel_time_damp[,i]))[1:3]
 }
 
 row.names(speedup_damp) = unique(damp$D)
@@ -88,27 +127,24 @@ speedup_length= data.frame(matrix(ncol = length(unique(length$p)), nrow = 5))
 colnames(speedup_length) = c("1", "2", "4", "8", "16")
 
 for (i in colnames(speedup_length)) {
-  speedup_length[,i] = (as.numeric(serial_time_length)/as.numeric(parallel_time_length[,i]))[1:5]
+  speedup_length[,i] = (as.numeric(serial_time_length)/
+                          as.numeric(parallel_time_length[,i]))[1:5]
 }
 
 row.names(speedup_length) = unique(length$K)
 ```
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
 
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+kable(speedup_damp, row.names = TRUE, 
+      caption = "Speed up for corresponding $D$ (rows) dampening ratios and $p$ (columns) number of processes.")
 ```
-
-```{r echo=FALSE, message=FALSE, warning=FALSE}
-
-```
+The 
 
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
-kable(speedup_damp, row.names = TRUE, caption = "Speed up for corresponding $D$ (rows) dampening ratios and $p$ (columns) number of processes.")
-```
-
-```{r echo=FALSE, message=FALSE, warning=FALSE}
-kable(speedup_length, row.names = TRUE, caption = "Speed up for corresponding $K$ (rows) number of steps in the random walk and $p$ (columns) number of processes.")
+kable(speedup_length, row.names = TRUE, 
+      caption = "Speed up for corresponding $K$ (rows) number of steps in the random walk and $p$ (columns) number of processes.")
 ```
 
 
@@ -123,6 +159,33 @@ library(ggplot2)
 library(knitr)
 library(stats)
 
+# Set options to display numbers without scientific notation
+options(scipen = 999)
+
+df = data.frame(
+  Node = c(597621, 163075, 537039, 41909, 504140),
+  PageRank = c(0.000078, 0.000077, 0.000077, 0.000070, 0.000064)
+)
+
+kable(df, format = "markdown", 
+      caption = "Node and corresponding PageRank estimate for the node given K is 100, p is 16, and D is 0.25.")
+
+df1 = data.frame(
+  Node = c(163075, 537039, 597621, 605856, 551829),
+  PageRank = c(0.000043, 0.000039, 0.000039, 0.000034, 0.000034)
+)
+
+kable(df1, format = "markdown", 
+      caption = "Node and corresponding PageRank estimate for the node given K is 100, p is 16, and D is 0.50.")
+
+df2 = data.frame(
+  Node = c(163075, 537039, 597621, 605856, 819223),
+  PageRank = c(0.000020, 0.000017, 0.000017, 0.000015, 0.000014)
+)
+
+kable(df2, format = "markdown", 
+      caption = "Node and corresponding PageRank estimate for the node given K is 100, p is 16, and D is 0.75.")
+
 #Import data for analysis
 damp = read.csv2("dampening.csv", header = FALSE, sep = ",")
 colnames(damp) = c("Time", "K", "p", "D")
@@ -135,10 +198,12 @@ serial_time_damp = subset(damp, p == 1)$Time
 serial_time_length = subset(length, p == 1)$Time
 
 #Get the parallel times for each P value
-parallel_time_damp = data.frame(matrix(ncol = length(unique(damp$p)), nrow = dim(damp)[1]))
+parallel_time_damp = data.frame(matrix(ncol = length(unique(damp$p)), 
+                                       nrow = dim(damp)[1]))
 colnames(parallel_time_damp) = c("1", "2", "4", "8", "16")
 
-parallel_time_length = data.frame(matrix(ncol = length(unique(length$p)), nrow = dim(length)[1]))
+parallel_time_length = data.frame(matrix(ncol = length(unique(length$p)), 
+                                         nrow = dim(length)[1]))
 colnames(parallel_time_length) = c("1", "2", "4", "8", "16")
 
 for (i in colnames(parallel_time_damp)) {
@@ -158,7 +223,8 @@ speedup_damp= data.frame(matrix(ncol = length(unique(damp$p)), nrow = 3))
 colnames(speedup_damp) = c("1", "2", "4", "8", "16")
 
 for (i in colnames(speedup_damp)) {
-  speedup_damp[,i] = (as.numeric(serial_time_damp)/as.numeric(parallel_time_damp[,i]))[1:3]
+  speedup_damp[,i] = (as.numeric(serial_time_damp)/
+                        as.numeric(parallel_time_damp[,i]))[1:3]
 }
 
 row.names(speedup_damp) = unique(damp$D)
@@ -167,16 +233,19 @@ speedup_length= data.frame(matrix(ncol = length(unique(length$p)), nrow = 5))
 colnames(speedup_length) = c("1", "2", "4", "8", "16")
 
 for (i in colnames(speedup_length)) {
-  speedup_length[,i] = (as.numeric(serial_time_length)/as.numeric(parallel_time_length[,i]))[1:5]
+  speedup_length[,i] = (as.numeric(serial_time_length)/
+                          as.numeric(parallel_time_length[,i]))[1:5]
 }
 
 row.names(speedup_length) = unique(length$K)
 
 
 #Tables for speedup and timings
-kable(speedup_damp, row.names = TRUE, caption = "Speed up for corresponding $D$ (rows) dampening ratios and $p$ (columns) number of processes.")
+kable(speedup_damp, row.names = TRUE, 
+      caption = "Speed up for corresponding $D$ (rows) dampening ratios and $p$ (columns) number of processes.")
 
-kable(speedup_length, row.names = TRUE, caption = "Speed up for corresponding $K$ (rows) number of steps in the random walk and $p$ (columns) number of processes.")
+kable(speedup_length, row.names = TRUE, 
+      caption = "Speed up for corresponding $K$ (rows) number of steps in the random walk and $p$ (columns) number of processes.")
 
 
 ```
@@ -187,43 +256,3 @@ kable(speedup_length, row.names = TRUE, caption = "Speed up for corresponding $K
 ```{r}
 sessionInfo()
 ```
-
-
-
-D = 0.75,0.5,0.25
-p = 16
-k = 100
-
-163075 0.000020
-537039 0.000017
-597621 0.000017
-605856 0.000015
-819223 0.000014
-
-
-163075 0.000043
-537039 0.000039
-597621 0.000039
-605856 0.000034
-551829 0.000034
-
-
-597621 0.000078
-163075 0.000077
-537039 0.000077
-41909 0.000070
-504140 0.000064
-
-
-
-
-p = 16
-k = 100
-d = 0.25
-
-
-597621 0.000078
-163075 0.000077
-537039 0.000077
-41909 0.000070
-504140 0.000064
